// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Character count when it includes a hint renders with hint 1`] = `

<span id="character-count-with-error-info"
      class="govuk-hint govuk-character-count__message "
>
  It&#x2019;s on your National Insurance card, benefit letter, payslip or P60. For example, &#x2018;QQ 12 34 56 C&#x2019;.
</span>

`;

exports[`Character count when it includes an error message renders with error message 1`] = `

<span id="character-count-with-error-info"
      class="govuk-error-message govuk-character-count__message "
>
  Error message
</span>

`;

exports[`Character count with dependant components renders with label 1`] = `

<label class="govuk-label"
       for="my-character-count"
>
  Full address
</label>

`;
